@@ -1,8 +1,8 @@
 Package: GGIR
 Type: Package
 Title: Raw Accelerometer Data Analysis
-Version: 1.5-23
-Date: 2018-07-04
+Version: 1.5-24
+Date: 2018-07-09
 Authors@R: c(person("Vincent T","van Hees",role=c("aut","cre"),
                   email="vincentvanhees@gmail.com"),
                   person("Zhou","Fang",role="ctb"),
@@ -24,7 +24,7 @@ Depends: stats, utils, R (>= 2.10)
 NeedsCompilation: yes
 LinkingTo: Rcpp
 VignetteBuilder: knitr
-Packaged: 2018-07-04 11:32:04 UTC; vincent
+Packaged: 2018-07-09 16:03:27 UTC; vincent
 Author: Vincent T van Hees [aut, cre],
   Zhou Fang [ctb],
   Jing Hua Zhao [ctb],
@@ -33,4 +33,4 @@ Author: Vincent T van Hees [aut, cre],
   Severine Sabia [ctb],
   Jairo H Migueles [ctb]
 Repository: CRAN
-Date/Publication: 2018-07-04 12:30:02 UTC
+Date/Publication: 2018-07-09 18:30:06 UTC
